test/libsolidity/syntaxTests/nameAndTypeResolution/558_no_address_members_on_contract_delegatecall_v050.sol
pragma experimental "v0.5.0";
contract C {
    function f() public {
        this.delegatecall;
    }
}
// ----
// TypeError: (77-94): Member "delegatecall" not found or not visible after argument-dependent lookup in contract C.
